fixed some overlapping

--- a/css/index.css
+++ b/css/index.css
@@ -252,7 +252,7 @@ nav .container a {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  width: 60%;
+  width: 75%;
   justify-content: space-between;
 }
 #about-us-main h1,
@@ -269,15 +269,30 @@ nav .container a {
   padding: 1rem;
   box-sizing: border-box;
   margin-bottom: 2rem;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+@media (max-width: 500px) {
+  #about-us-main div {
+    width: 90%;
+  }
+}
+#about-us-main div p {
+  width: 55%;
   font-size: 1.5rem;
 }
+@media (max-width: 800px) {
+  #about-us-main div p {
+    width: 100%;
+  }
+}
 #about-us-main div .dev-pict {
+  width: 40%;
   font-size: 1.5rem;
   float: left;
   margin-bottom: 0;
   margin-right: 1rem;
-  height: 100%;
-  width: 17rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -288,19 +303,9 @@ nav .container a {
   margin-bottom: 1rem;
 }
 @media (max-width: 800px) {
-  #about-us-main {
-    width: 75%;
-  }
-}
-@media (max-width: 500px) {
-  #about-us-main {
-    width: 90%;
-  }
-  #about-us-main div {
+  #about-us-main div .dev-pict {
     width: 100%;
-    margin-bottom: 2rem;
-  }
-  #about-us-main h2 {
-    text-align: center;
+    margin-right: 0;
+    margin-bottom: 1rem;
   }
 }
