--- a/less/about-us.less
+++ b/less/about-us.less
@@ -2,7 +2,7 @@
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    width: 60%;
+    width: 75%;
     justify-content: space-between;
 
     h1, h2 {
@@ -21,9 +21,35 @@
         padding: 1rem;
         box-sizing: border-box;
         margin-bottom: 2rem;
-        font-size: 1.5rem;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        @media(@mobile) {
+            // div {
+            //     width: 100%;
+            //     margin-bottom: 2rem;
+            // }
+    
+            // h2 {
+            //     // margin-top: 1rem;
+            //     text-align: center;
+            // }
+    
+            width: 90%;
+        }
+
+        p {
+            width: 55%;
+            font-size: @main-font-size;
+
+            @media(@tablet) {
+                width: 100%;
+            }
+        }
         
         .dev-pict {
+            width: 40%;
             // width: auto;
             // font-weight: bold;
             font-size: @main-font-size;
@@ -33,8 +59,7 @@
             // text-align: center;
             margin-bottom: 0;
             margin-right: 1rem;
-            height: 100%;
-            width: 17rem;
+            // height: 20rem;
             display: flex;
             flex-wrap: wrap;
             // flex-direction: column;
@@ -46,24 +71,21 @@
                 width: 100%;
                 margin-bottom: 1rem;
             }
+
+            @media(@tablet) {
+                width: 100%;
+                margin-right: 0;
+                margin-bottom: 1rem;
+            }
         }
     }
 
-    @media(@tablet) {
-        width: 75%;
-    }
+    // @media(@tablet) {
+    //     width: 75%;
 
-    @media(@mobile) {
-        div {
-            width: 100%;
-            margin-bottom: 2rem;
-        }
-
-        h2 {
-            // margin-top: 1rem;
-            text-align: center;
-        }
-
-        width: 90%;
-    }
+    //     .dev-pict, p {
+    //         width: 100%;
+    //         background-color: blue;
+    //     }
+    // }
 }
